mule-user-guide/v/3.2/studio-components.adoc
=  Studio组件

== 组件概述

被称为*Components*的Studio构建块分为三类：常规，脚本和Web服务。

通常组件在收到消息时执行。嵌入到常规组件中的逻辑无法修改。诸如记录，流参考和回声等组件属于这个类别。

脚本组件不包含预打包的逻辑;相反，它们允许开发人员指定要添加到组件中的逻辑（以自定义脚本或Java类的形式）。脚本组件还允许您：

* 配置拦截器
* 添加Spring bean
* 更改相关类中特定属性的值或引用

Java组件允许你引用一个Java类。其他脚本组件支持Groovy，JavaScript，Python和Ruby脚本引擎。

顾名思义，Web Service组件使Mule能够使用SOAP和RESTful协议与外部Web服务进行通信。 SOAP和RESTful组件使用CXF和Jersey服务将消息从Java转换为XML。 Web Service组件还允许开发人员选择或定义要由组件调用的逻辑。如果使用RESTful组件，则只需选择一个Java类并向该组件添加脚本。另一方面，SOAP配置要求您定义属性并选择用于发布SOAP Web服务的操作方法。作为如何使用SOAP组件的示例，可以将SOAP消息发送到启用Web服务的网站，例如二手车价格数据库以及搜索所需的参数。然后该网站将返回一个XML格式的文件和结果数据，例如价格，型号和功能。返回的数据将直接集成到第三方网站或应用程序中。

== 配置组件

要配置组件，请双击该组件以打开*Pattern Properties*对话窗口。 Studio调色板中的每个组件都包含两个通用字段：*Display name*和*Documentation*，它们都是可选的，并且应该为Studio用户所熟悉，因为它们几乎适用于所有Studio构建块。

除了两个常见领域之外，大多数组件不需要大量配置。例如，*Echo*不支持*Display name*和*Documentation*以外的任何字段。 Studio中可用的五个脚本组件支持几乎相同的属性窗格字段。

有关详细信息，请参阅单个组件参考页面，了解如何使用和配置每种类型的组件。

== 组件可在Mule Studio中使用

以下三个表格分别详细介绍了其中一个Studio组件子组：

=== 常规组件

通用组件允许您通过附加日志记录或显示输出等功能来增强流程。

[%header%autowidth.spread]
|===
|   |组件 |说明 |文档
| image:Echo-24x16.png[回声24x16]  | Echo  |将正在处理的消息输出到日志或显示屏，然后将消息传递到流中的下一个构建块。 | link:/mule-user-guide/v/3.2/echo-component-reference[回声组件参考]


image:flow-reference-24x16.png[流基准24x16]  |流参考 |该构建块调用另一个外部流。被调用流可以是以下两种类型之一：+
  A *subflow*，它继承了调用流的处理策略和异常处理属性。 +
 +
 设置自己的处理策略和异常处理属性的*child flow,*。 +
 +
 如果被调用的流程是_Synchronous_，则调用流程将等待直到被调用的流程完成执行，然后继续。如果被叫流是_Asynchronous_，则调用流将立即恢复执行。 | link:/mule-user-guide/v/3.2/flow-ref-component-reference[流程参考组件参考]
| image:Logger-24x16.png[记录仪-24x16]  |记录器 |记录自定义字符串，包括从嵌入式表达式构建的字符串。还允许指定日志记录级别和类别。 | link:/mule-user-guide/v/3.2/logger-component-reference[记录器组件参考]

|===

=== 脚本组件

脚本组件通过提供特定于语言的"shells"在Mule应用程序中提供定制编码的业务逻辑来促进软件即服务（SaaS）集成。您可以使用Java，Ruby，JavaScript，Groovy或Python编写业务逻辑。

[%header%autowidth.spread]
|===
|   |组件 |说明 |文档
| image:groovy-component-24x16.png[常规组分-24x16]  | Groovy  |便于集成由Groovy脚本引擎支持的自定义脚本。 | link:/mule-user-guide/v/3.2/groovy-component-reference[Groovy组件参考]


image:java-component-24x16.png[Java的组件-24x16]  | Java  |允许您选择要由应用程序流调用的Java类。 |即将推出！


image:python-component-24x16.png[蟒组分-24x16]  | Python  |允许集成由Python脚本引擎支持的自定义脚本。 | link:/mule-user-guide/v/3.2/python-component-reference[Python组件参考]


image:Component-24x16.png[组件-24x16]  |脚本 |使用Groovy，JavaScript，Python或Ruby编写的脚本可用于应用程序流。 | link:/mule-user-guide/v/3.2/script-component-reference[脚本组件参考]
|===

===  Web服务组件

Web Service组件为开发人员提供了引用RESTful和SOAP服务所需的类和API的框架。这些组件允许您添加拦截器，这些拦截器是在服务发布之前执行的捆绑逻辑，用于运行调度或记录特定事件等任务。

[%header%autowidth.spread]
|===
|   |组件 |说明 |文档
| image:Rest-24x16.png[休息-24x16]  | REST  |通过Jersey为应用程序流提供REST Web服务。 | link:/mule-user-guide/v/3.2/rest-component-reference[REST组件参考]


image:Soap-24x16.png[皂24x16]  | SOAP  |通过CXF为应用程序流提供Web服务。 | link:/mule-user-guide/v/3.2/soap-component-reference[SOAP组件参考]

|===
